fix z-index

--- a/src/app/pages/playlists-page/playlists-page.component.less
+++ b/src/app/pages/playlists-page/playlists-page.component.less
@@ -149,7 +149,7 @@
             flex-direction: column;
             align-items: center;
           }
-          
+
           .playlist-tracks__avatar {
 
             .playlist-tracks__image {
@@ -241,7 +241,7 @@
       position: fixed;
       display: flex;
       justify-content: center;
-      z-index: 1;
+      z-index: 10;
       padding-top: 50px;
       left: 0;
       top: 0;
